--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,10 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FORGE_API_KEY=
+FORGE_SERVER_ID=
+FORGE_DOMAIN=
+
+GITHUB_OWNER=
+GITHUB_TOKEN=
