--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,8 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+DEPLOYER_TOKEN=
+
 FORGE_API_KEY=
 FORGE_SERVER_ID=
 FORGE_DOMAIN=
